[project]
name = "diffengine"
description = "diffengine"
authors = [{name="okotaku",email="to78314910@gmail.com"}]
version = "0.2.1"
requires-python = ">= 3.11"
readme = "README.md"
dependencies = [
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "openmim>=0.3.9",
    "datasets==2.14.5",
    "diffusers==0.21.3",
    "mmengine>=0.8.5",
    "sentencepiece>=0.1.99",
    "tqdm",
    "transformers==4.33.3",
    "ujson"
]
license = {file = "LICENSE"}
keywords = ["computer vision", "diffusion models"]

[tool.setuptools]
package-dir = {"" = "diffengine"}

[tool.setuptools.packages.find]
exclude = ["configs", "tools", "demo", "work_dirs", "examples", "docs"]

[tool.ruff]
target-version = "py311"
select = ["ALL"]
ignore = [
    "ANN003",
    "ANN101",
    "ANN202",
    "S101",
    "BLE001",
    "PLR0913",
    "PGH004",
    "B028",
    "ANN001",
    "ANN002",
    "PTH118",
    "ERA001",
    "C408",
    "INP001",
    "D100",
    "D107",
    "D104",
]

[tool.ruff.per-file-ignores]
"setup.py" = ["C901", "FBT002", "PLW2901", "PLR0912", "PTH", "S102", "D",
 "ANN201", "INP001"]
"tests/*" = ["PLR2004", "N806", "PTH", "SLF001", "PT009", "D", "ANN201",
 "INP001"]
"tools/*" = ["T201", "ISC002", "PTH", "D", "INP001"]

[tool.mypy]
python_version = "3.11"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
