[project]
name = "diffengine"
description = "diffengine"
authors = [{name="takuoko",email="to78314910@gmail.com"}]
version = "0.2.1"
requires-python = ">= 3.10"
readme = "README.md"
dependencies = [
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "openmim>=0.3.9",
    "datasets==2.14.6",
    "diffusers==0.23.0",
    "mmengine>=0.9.0",
    "sentencepiece>=0.1.99",
    "tqdm",
    "transformers==4.34.1",
    "ujson",
    "peft>=0.6.2",
]
license = {file = "LICENSE"}
keywords = ["computer vision", "diffusion models"]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage"
]
docs = [
    "docutils==0.18.1",
    "modelindex",
    "myst-parser",
    "pytorch_sphinx_theme@git+https://github.com/mzr1996/pytorch_sphinx_theme",
    "sphinx==6.1.3",
    "sphinx-autoapi",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-notfound-page",
    "sphinx-rtd-theme",
    "sphinx-tabs",
    "sphinxcontrib-jquery",
    "tabulate"
]

[tool.setuptools.cmdclass]
build = "add_mim_extension.MIMBuild"

[tool.setuptools.packages.find]
include = ["diffengine*", "add_mim_extension.py"]
exclude = ["build*", "docs*", "dist*", "tools*", "configs*", "tests*", "docker*", "demo*", "data*", "work_dirs*", "projects*"]

[tool.wheel]
include = ["diffengine*", "add_mim_extension.py"]
exclude = ["build*", "docs*", "dist*", "tools*", "configs*", "tests*", "docker*", "demo*", "data*", "work_dirs*", "projects*"]

[tool.distutils.bdist_wheel]
universal = true

[tool.ruff]
target-version = "py311"
select = ["ALL"]
ignore = [
    "ANN003",
    "ANN101",
    "ANN202",
    "S101",
    "BLE001",
    "PLR0913",
    "PGH004",
    "B028",
    "ANN001",
    "ANN002",
    "PTH118",
    "ERA001",
    "C408",
    "INP001",
    "D100",
    "D107",
    "D104",
    "EXE002",
]

[tool.ruff.per-file-ignores]
"add_mim_extension.py" = ["C901", "FBT002", "PLW2901", "PLR0912", "PTH", "S102", "D",
 "ANN201", "INP001", "T201"]
"tests/*" = ["PLR2004", "N806", "PTH", "SLF001", "PT009", "D", "ANN201",
 "INP001"]
"tools/*" = ["T201", "ISC002", "PTH", "D", "INP001"]

[tool.mypy]
python_version = "3.11"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.codespell]
ignore-words-list = "enver,"
